prevent text wrapping under image

--- a/css/main.less
+++ b/css/main.less
@@ -207,6 +207,10 @@ html {
                                             margin-right: 20px;
                                         }
 
+                                        p {
+                                            overflow: hidden;
+                                        }
+
                                         p:nth-child(4) {
                                             margin-left: 90px;
                                         }
